k8s/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: projet-final
spec:
  selector:
    app: back
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
