k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: projet-final
spec:
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
